--- a/tn.edu.esprit.erpBi.hrmProjectClient/.classpath
+++ b/tn.edu.esprit.erpBi.hrmProjectClient/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="config/hibernate-core-4.0.1.Final.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/tn.edu.esprit.erpBi.hrmProject"/>
 	<classpathentry kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
